[package]
name = "mix-alchemy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
diesel = "2"
serde = "1.0.192"
serde_json = "1.0.108"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.4"
features = ["diesel_mysql"]
